--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/linearLayoutSlidingBottom"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_marginTop="175px"
-                android:background="@color/grey_light_alpha">
+              android:layout_height="wrap_content"
+              android:background="@color/grey_light_alpha">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <View
+            android:id="@+id/viewSliderStopper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewInfo"
         android:layout_width="690px"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:visibility="visible"
         android:layout_gravity="center_horizontal"
         android:scrollbars="vertical"
         android:fadeScrollbars="true"/>
+
+
 
 </LinearLayout>
