--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/color/text_whit_redv2_selector.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/color/text_whit_redv2_selector.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/red_v2" android:state_focused="false" android:state_pressed="true"/>
-    <item android:color="@color/black_text_v2"/>
+    <item android:color="@color/white"/>
 
 </selector>
