--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_dark_grey_rounded_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_dark_grey_rounded_bordered.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <solid android:color="@color/grey_light_v2"/>
+    <solid android:color="@color/grey_light_bg_v2"/>
     <corners android:radius="@dimen/button_corner_radius"/>
     <stroke
         android:width="2dp"
