--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered_new.xml
@@ -3,9 +3,9 @@
        android:shape="rectangle" >
 
     <solid android:color="@color/white"/>
-    <corners android:radius="20px"/>
+    <corners android:radius="15dp"/>
     <stroke
-        android:width="2px"
+        android:width="1dp"
         android:color="@color/transparent"
         />
 
