--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -3,6 +3,7 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/white"
               android:orientation="vertical">
 
 
@@ -128,31 +129,32 @@
 
                 <ImageView
                     android:id="@+id/imageViewPrev"
-                    android:layout_width="36px"
-                    android:layout_height="21px"
+                    android:layout_width="52px"
+                    android:layout_height="52px"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/textViewInvPeriod"
                     android:rotation="180"
                     android:layout_marginRight="60px"
-                    android:src="@drawable/arrow_right_white"/>
+                    android:src="@drawable/arrow_with_padding"/>
 
                 <TextView
                     android:id="@+id/textViewInvPeriod"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:text="@string/this_week_cap"
                     android:textColor="@color/white"
                     android:textSize="32px"/>
 
                 <ImageView
                     android:id="@+id/imageViewNext"
-                    android:layout_width="36px"
-                    android:layout_height="21px"
+                    android:layout_width="52px"
+                    android:layout_height="52px"
                     android:layout_toRightOf="@+id/textViewInvPeriod"
                     android:layout_marginLeft="60px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/arrow_right_white"/>
+                    android:src="@drawable/arrow_with_padding"/>
 
             </RelativeLayout>
 
@@ -164,18 +166,18 @@
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="2px"
-                    android:layout_marginBottom="36px"
-                    android:background="@color/grey_dark_less"/>
+                <!--<ImageView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="2px"-->
+                    <!--android:layout_marginBottom="36px"-->
+                    <!--android:background="@color/grey_dark_less"/>-->
 
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout1"
                     android:layout_width="match_parent"
                     android:layout_height="84px"
-                    android:background="@drawable/list_transparent_selector"
+                    android:background="@drawable/list_white_selector"
                     android:gravity="center_vertical">
 
                     <TextView
@@ -222,7 +224,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_transparent_selector">
+                    android:background="@drawable/list_white_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal2"
@@ -259,7 +261,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_transparent_selector">
+                    android:background="@drawable/list_white_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal3"
@@ -297,7 +299,7 @@
                     android:layout_height="84px"
                     android:visibility="gone"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_transparent_selector">
+                    android:background="@drawable/list_white_selector">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal4"
@@ -334,7 +336,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:gravity="center_vertical"
-                    android:background="@drawable/list_transparent_selector"
+                    android:background="@drawable/list_white_selector"
                     android:visibility="gone">
 
                     <TextView
@@ -372,7 +374,7 @@
                     android:layout_height="2px"
                     android:layout_marginBottom="36px"
                     android:layout_marginTop="36px"
-                    android:background="@color/grey_dark_less"/>
+                    android:background="@color/grey_light"/>
 
             </LinearLayout>
 
@@ -381,7 +383,7 @@
                 android:layout_width="680px"
                 android:layout_height="84px"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/list_transparent_selector"
+                android:background="@drawable/list_white_selector"
                 android:gravity="center_vertical"
                 android:layout_marginBottom="44px">
 
