--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="495px"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/white"
+    android:background="@color/blue_black_v2"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:splitMotionEvents="false">
@@ -27,13 +27,13 @@
                 android:id="@+id/driverImageRL"
                 android:layout_width="match_parent"
                 android:layout_height="200px"
-                android:background="@color/grey_light_side_menu"
+                android:background="@color/grey_menu_black_v2"
                 android:orientation="horizontal">
 
                 <RelativeLayout
                     android:id="@+id/profileRl"
-                    android:layout_width="96px"
-                    android:layout_height="96px"
+                    android:layout_width="114px"
+                    android:layout_height="114px"
                     android:layout_marginLeft="40px"
                     android:layout_centerVertical="true"
                     android:splitMotionEvents="false"
@@ -41,15 +41,15 @@
 
                     <ImageView
                         android:id="@+id/profileBack"
-                        android:layout_width="96px"
-                        android:layout_height="96px"
+                        android:layout_width="114px"
+                        android:layout_height="114px"
                         android:background="@drawable/ring"
                         android:tag="mwar"/>
 
                     <ImageView
                         android:id="@+id/profileImg"
-                        android:layout_width="96px"
-                        android:layout_height="96px"
+                        android:layout_width="114px"
+                        android:layout_height="114px"
                         android:layout_centerInParent="true"
                         android:tag="mwar"/>
                 </RelativeLayout>
@@ -76,7 +76,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Dr"
-                            android:textColor="@color/black_text_v2"
+                            android:textColor="@color/white"
                             android:textSize="34px"/>
 
                         <RelativeLayout
@@ -88,7 +88,7 @@
                             <RatingBar
                                 android:id="@+id/ratingBarFeedbackSide"
                                 android:layout_width="wrap_content"
-                                android:layout_height="40px"
+                                android:layout_height="50px"
                                 android:layout_marginTop="10px"
                                 android:isIndicator="true"
                                 android:progressDrawable="@drawable/rating_star_white_selector"
@@ -144,7 +144,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayoutAutosOn"
                 android:layout_width="match_parent"
-                android:layout_height="84px"
+                android:layout_height="96px"
                 android:background="@drawable/transparent"
                 android:splitMotionEvents="false">
 
@@ -165,7 +165,7 @@
                     android:layout_toRightOf="@+id/imageViewAutosIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/jugnoo_on"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
                 <ImageView
@@ -182,7 +182,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayoutDeliveryOn"
                 android:layout_width="match_parent"
-                android:layout_height="84px"
+                android:layout_height="96px"
                 android:background="@drawable/transparent"
                 android:splitMotionEvents="false"
                 >
@@ -190,7 +190,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:layout_alignParentBottom="true"
-                    android:background="@color/grey_light_v2"/>
+                    android:background="@color/black_text_v2"/>
 
                 <ImageView
                     android:id="@+id/imageViewDeliveryIcon"
@@ -209,7 +209,7 @@
                     android:layout_toRightOf="@+id/imageViewDeliveryIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/delivery_on"
-                    android:textColor="@color/black_text_v2"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
                 <ImageView
@@ -281,7 +281,7 @@
                     android:layout_toRightOf="@+id/imageViewHomeIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/home"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -290,6 +290,7 @@
                 android:id="@+id/earningsRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -298,7 +299,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/earningv2_selector"
+                    android:src="@drawable/earnings_v2"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -309,7 +310,7 @@
                     android:layout_toRightOf="@+id/imageViewEarningIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/earnings"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -319,6 +320,7 @@
                 android:id="@+id/paymentRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -327,7 +329,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/invoices_v2_selector"
+                    android:src="@drawable/invoices_v2"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -338,7 +340,7 @@
                     android:layout_toRightOf="@+id/imageViewInvoicesIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/Invoices"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -347,6 +349,7 @@
                 android:id="@+id/relativeLayoutSuperDrivers"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -355,7 +358,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/super_driver_v2_selector"
+                    android:src="@drawable/super_driver_v2"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -366,7 +369,7 @@
                     android:layout_toRightOf="@+id/imageViewSuperDriverIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/super_driver"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -375,7 +378,8 @@
                 android:id="@+id/auditRL"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
-                android:visibility="visible"
+                android:visibility="gone"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
 
@@ -385,7 +389,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/audit_v2_selector"
+                    android:src="@drawable/audit_menu_v2"
                     android:tag="mwar"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -396,7 +400,7 @@
                     android:layout_toRightOf="@+id/imageViewAuditIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/audit_lower"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -405,6 +409,7 @@
                 android:id="@+id/inviteFriendRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -413,7 +418,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/invite_n_earn_v2_selector"
+                    android:src="@drawable/invite_n_earn_v2"
                     android:tag="mwar"/>
 
                 <TextView
@@ -424,14 +429,14 @@
                     android:layout_toRightOf="@+id/imageViewInviteErnIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/invite_earn"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:layout_alignParentBottom="true"
-                    android:background="@color/grey_light_v2"/>
+                    android:background="@color/black_text_v2"/>
 
             </RelativeLayout>
 
@@ -471,7 +476,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/sharing_rides"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -491,7 +496,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/fare_details"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -522,6 +527,7 @@
                 android:id="@+id/callUsRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
@@ -530,7 +536,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/call_v2_selector"
+                    android:src="@drawable/call_v2"
                     android:tag="mwar"/>
 
                 <TextView
@@ -541,7 +547,7 @@
                     android:layout_toRightOf="@+id/imageViewCallIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/call_us"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -561,7 +567,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/destination_menu"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -581,7 +587,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/Paytm_recharge"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -591,6 +597,7 @@
                 android:id="@+id/relativeLayoutRateCard"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false"
                 android:visibility="visible">
 
@@ -600,7 +607,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/rate_card_v2_selector"
+                    android:src="@drawable/rate_card_v2"
                     android:tag="mwar"/>
 
                 <TextView
@@ -611,7 +618,7 @@
                     android:layout_toRightOf="@+id/imageViewRateCardIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/rate_card"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -623,6 +630,7 @@
                 android:layout_height="84px"
 
                 android:splitMotionEvents="false"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:visibility="visible">
 
                 <ImageView
@@ -631,7 +639,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/language_pref_v2_selector"
+                    android:src="@drawable/language_pref_v2"
                     android:tag="mwar"/>
 
                 <TextView
@@ -642,7 +650,7 @@
                     android:layout_toRightOf="@+id/imageViewLangPrefIcon"
                     android:layout_marginLeft="8px"
                     android:text="@string/language_preferences"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -662,7 +670,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/terms"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
 
             </RelativeLayout>
@@ -680,7 +688,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
                     android:text="@string/logout"
-                    android:textColor="@color/text_color_blackv2_redv2_selector"
+                    android:textColor="@color/white"
                     android:textSize="34px"/>
             </RelativeLayout>
 
