--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history_new.xml
@@ -3,7 +3,7 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/list_transparent_selector"
+              android:background="@drawable/list_white_selector"
               android:orientation="vertical">
 
     <RelativeLayout
@@ -31,7 +31,7 @@
                 android:gravity="center"
                 android:text="MON"
                 android:textColor="@color/grey_light_v2"
-                android:textSize="30px"/>
+                android:textSize="32px"/>
 
             <RelativeLayout
                 android:id="@+id/relativeBelow"
@@ -48,7 +48,7 @@
                     android:text="00:00"
                     android:layout_centerVertical="true"
                     android:textColor="@color/black_text_v2"
-                    android:textSize="32px"/>
+                    android:textSize="34px"/>
 
 
                 <TextView
@@ -60,7 +60,7 @@
                     android:text="@string/status"
                     android:layout_centerVertical="true"
                     android:textColor="@color/black_text_v2"
-                    android:textSize="32px"/>
+                    android:textSize="34px"/>
 
             </RelativeLayout>
 
@@ -98,7 +98,7 @@
                     android:layout_marginRight="10px"
                     android:layout_centerVertical="true"
                     android:textColor="@color/black_text_v2"
-                    android:textSize="36px"/>
+                    android:textSize="38px"/>
 
                 <ImageView
                     android:id="@+id/imageViewArrow"
@@ -119,7 +119,7 @@
         android:layout_height="2px"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="4px"
-        android:background="@color/grey_light_v2"
+        android:background="@color/grey_light"
         android:layout_marginBottom="4px"/>
 
 
