--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linearLayoutRideItem"
               android:gravity="center_horizontal"
+              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -18,7 +19,7 @@
         android:gravity="center_vertical"
         android:text="@string/jugnoo_cut"
         android:textColor="@color/black_text_v2"
-        android:textSize="30px"/>
+        android:textSize="34px"/>
 
 
         <TextView
@@ -29,7 +30,7 @@
         android:gravity="center_vertical|right"
         android:text="0"
         android:textColor="@color/black_text_v2"
-        android:textSize="30px"/>
+        android:textSize="34px"/>
 
     </LinearLayout>
 
