--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linear"
               android:orientation="vertical"
+              android:background="@color/white"
               android:gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -26,16 +27,16 @@
                 android:gravity="center_vertical"
                 android:text="@string/estimated_payout_lower"
                 android:textColor="@color/black_text_v2"
-                android:textSize="30px"/>
+                android:textSize="34px"/>
             <TextView
                 android:id="@+id/textViewActualFareValue"
                 android:layout_width="140px"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical|right"
-                android:text="00000.00"
+                android:text="0000.00"
                 android:textColor="@color/black_text_v2"
-                android:textSize="30px"/>
+                android:textSize="34px"/>
 
         </RelativeLayout>
 
@@ -51,16 +52,16 @@
                 android:gravity="center_vertical"
                 android:text="@string/cash_collected"
                 android:textColor="@color/black_text_v2"
-                android:textSize="30px"/>
+                android:textSize="34px"/>
             <TextView
                 android:id="@+id/textViewCustomerPaid"
                 android:layout_width="140px"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical|right"
-                android:text="00000.00"
+                android:text="0000.00"
                 android:textColor="@color/black_text_v2"
-                android:textSize="30px"/>
+                android:textSize="34px"/>
 
         </RelativeLayout>
 
@@ -78,21 +79,21 @@
 
             <TextView
                 android:id="@+id/textViewBankDeposite"
-                android:layout_width="460px"
+                android:layout_width="440px"
                 android:layout_height="45px"
                 android:gravity="center_vertical"
                 android:text="@string/bank_deposite"
                 android:textColor="@color/black"
-                android:textSize="36px"/>
+                android:textSize="40px"/>
             <TextView
                 android:id="@+id/textViewBankDepositeValue"
-                android:layout_width="140px"
+                android:layout_width="160px"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical|right"
                 android:text="0000.00"
                 android:textColor="@color/black"
-                android:textSize="36px"/>
+                android:textSize="40px"/>
 
         </RelativeLayout>
 
@@ -139,7 +140,7 @@
                     android:gravity="center"
                     android:text="@string/total_distance"
                     android:textColor="@color/grey_light_v2"
-                    android:textSize="24px"/>
+                    android:textSize="28px"/>
 
             </RelativeLayout>
 
@@ -149,7 +150,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/imageViewVertical"
-                android:background="@color/grey_light_v2"/>
+                android:background="@color/grey_light"/>
 
             <RelativeLayout
                 android:layout_width="0px"
@@ -179,18 +180,23 @@
                     android:layout_weight="1"
                     android:text="@string/trips"
                     android:textColor="@color/grey_light_v2"
-                    android:textSize="24px"/>
+                    android:textSize="28px"/>
 
             </RelativeLayout>
 
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="620px"
-            android:layout_height="2px"
-            android:layout_marginTop="24px"
-            android:layout_marginBottom="35px"
-            android:background="@color/grey_light"/>
+        <!--<ImageView-->
+            <!--android:layout_width="620px"-->
+            <!--android:layout_height="2px"-->
+            <!--android:layout_marginTop="24px"-->
+            <!--android:background="@color/grey_light"/>-->
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="80px"
+           android:background="@color/grey_light_info_v2"
+           android:gravity="center">
 
         <TextView
             android:id="@+id/textViewTripsText"
@@ -199,6 +205,9 @@
             android:gravity="center_vertical"
             android:text="@string/trips"
             android:textColor="@color/black_text_v2"
-            android:textSize="30px"/>
+            android:textSize="34px"/>
+
+
+       </RelativeLayout>
 
 </LinearLayout>
