--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -109,6 +109,7 @@
     <color name="grey_light">#DDDDDD</color>
     <color name="grey_light_side_menu">#f9fafb</color>
     <color name="grey_light_alpha">#99DDDDDD</color>
+    <color name="grey_light_bg_v2">#d8d8d8</color>
     <color name="grey_light_v2">#bcbcbc</color>
     <color name="grey_dark_less">#A3A3A3</color>
     <color name="grey_dark">#838383</color>
@@ -116,6 +117,7 @@
     <color name="grey_dark_more">#5D5D5D</color>
     <color name="grey_black">#232323</color>
     <color name="grey_black_v2">#6e6a70</color>
+    <color name="grey_menu_black_v2">#363645</color>
     <color name="grey_black_light">#3E3E3E</color>
     <color name="grey_ride_history">#6D6e71</color>
 
