--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered.xml
@@ -6,7 +6,7 @@
     <corners android:radius="@dimen/button_corner_radius"/>
     <stroke 
         android:width="1px"
-        android:color="@color/black_translucent"
+        android:color="@color/grey_light"
         />
 
 </shape>
