--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/grey_light_btn_pressed.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/grey_light_btn_pressed.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <solid android:color="@color/red_v2"/>
-    <corners android:radius="5dp"/>
+    <solid android:color="@color/grey_light_more"/>
+    <corners android:radius="@dimen/button_corner_radius"/>
 
 </shape>
