--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/relative"
               android:orientation="vertical"
               android:background="@color/white"
@@ -35,7 +35,8 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topRl">
 
 
     <LinearLayout
@@ -45,12 +46,22 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textViewEngID"
+            android:layout_below="@+id/textViewStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24px"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black_text_v2"
+            android:textSize="26px"
+            android:text="STATUS"/>
+
+        <TextView
             android:id="@+id/dateTimeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginTop="24px"
-            android:layout_marginLeft="5px"
+            android:layout_marginTop="10px"
             android:layout_toRightOf="@+id/imageViewTime"
             android:singleLine="true"
             android:text="23 June, 2014 18:88 AM"
@@ -246,7 +257,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25px"
-            android:layout_marginBottom="25px"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -365,10 +376,49 @@
 
         </LinearLayout>
 
+       <RelativeLayout 
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/relativeLayoutCreateTicket"
+           android:gravity="center_horizontal"
+           android:layout_marginTop="44px"
+           android:layout_marginBottom="25px">
+           
+           <Button
+               android:id="@+id/buttonReportIssue"
+               android:layout_width="432px"
+               android:layout_height="80px"
+               android:text="@string/report_issue"
+               android:textColor="@color/black_text_v2"
+               android:textSize="30px"
+               android:visibility="gone"
+               android:background="@drawable/grey_light_btn_selector"/>
+
+           <TextView
+               android:id="@+id/textViewStatus"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_centerHorizontal="true"
+               android:textSize="32px"
+               android:text="STATUS"/>
+
+
+
+
+       </RelativeLayout> 
+
     </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
+    
+    <RelativeLayout 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/relativeContainer">
+        
+    </RelativeLayout>
 
 
 
-</LinearLayout>
+</RelativeLayout>
