--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/linearLayoutSlidingBottom"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/grey_light_alpha">
+<RelativeLayout
+    android:id="@+id/linearLayoutSlidingBottom"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/transparent"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
-        <View
-            android:id="@+id/viewSliderStopper"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </RelativeLayout>
+        android:layout_marginTop="140px"
+        android:background="@color/grey_light_alpha"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewInfo"
         android:layout_width="690px"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/imageViewSliderView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-40px"
+        android:fadeScrollbars="true"
         android:scrollbars="vertical"
-        android:fadeScrollbars="true"/>
+        android:visibility="visible"/>
+
+    <ImageView
+        android:id="@+id/imageViewSliderView"
+        android:layout_width="80px"
+        android:layout_height="80px"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="80px"
+        android:src="@drawable/up_arrow"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
